# menahel

./: .gitignore  Cargo.toml  log.txt
fixtures/: reset_user_table.sql  test_db.sql  user_test.sql
migrations/: 20250526030559_users.up.sql  20250526091418_projects.down.sql  20250526091418_projects.up.sql  20250527013916_tasks.up.sql  20250528072253_user_assign.down.sql  20250528072253_user_assign.up.sql  20250529012234_comments.up.sql
src/: constants.rs  enums.rs  lib.rs  main.rs  models.rs  origin_dbpool.rs  utils.rs
src/client/: api.rs  app.rs  command.rs  command_map.rs  component.rs  event.rs  key_map.rs  mod.rs  repository.rs  ui.rs
src/client/components/: component.rs  mod.rs  pane.rs
src/client/components/children/: mod.rs
src/client/components/children/command_pane/: command_line.rs  command_terminal.rs  log.rs  mod.rs
src/client/components/children/header_panes/: mod.rs  project_name.rs
src/client/components/children/task_panes/: mod.rs
src/errors/: db_error.rs  handler_errors.rs  messages.rs  mod.rs
src/errors/message_def/: comment.rs  comment_handler.rs  mod.rs  project.rs  project_handler.rs  repository.rs  task.rs  task_handler.rs  task_user.rs  user.rs  user_assign.rs  user_assign_handler.rs  user_handler.rs
src/handlers/: comment.rs  mod.rs  project.rs  root.rs  task.rs  tasks.rs  user.rs  user_assign.rs  utils.rs
src/handlers/test/: comment_test.rs  mod.rs  project_test.rs  root_test.rs  task_test.rs  user_assign_test.rs  user_test.rs  utils.rs
src/middleware/: processing_time.rs
src/models/: mod.rs
src/models/repository_model/: comment.rs  mod.rs  project.rs  task.rs  taskwithuser.rs  user.rs  user_assign.rs
src/models/response_model/: comment_response.rs  common_models.rs  mod.rs  project_response.rs  task_response.rs  user_assign_response.rs  user_response.rs
src/repository/: comment_repo.rs  mod.rs  project_repo.rs  task_repo.rs  task_user_repo.rs  user_assign_repo.rs  user_repo.rs  validations.rs
src/repository/tests/: comment_test.rs  mod.rs  project_test.rs  task_test.rs  task_user_test.rs  user_assign_test.rs  user_test.rs
src/repository/tests/fixtures/: comments.sql  projects.sql  tasks.sql  tasks_user.sql  user.sql  user_assign.sql
