[package]
name = "menahel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = [ "serde" ]}
email_address = "0.2.9"
regex = "1.11.1"
serde = { version = "1.0.219", features = [ "derive" ]}
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite-unbundled", "derive", "macros", "chrono", "uuid" ] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
once_cell = "1.21.3"
thiserror = "2.0.12"
enum-iterator = "2.1.0"

[dev-dependencies]
rand = "0.8"

