[package]
name = "menahel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
better-panic = "0.3.0"
chrono = { version = "0.4.41", features = [ "serde" ]}
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6"
config = "0.14.0"
crossterm = { version = "0.28", features = ["event-stream", "serde"] }
derive_deref = "1.1.1"
directories = "5.0.1"
email_address = "0.2.9"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.140"
serde_yaml = "0.9"
sha2 = "0.10.9"
signal-hook = "0.3.17"
simplelog = "0.12.2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite-unbundled", "derive", "macros", "chrono", "uuid" ] }
strip-ansi-escapes = "0.2.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
bytes = "1.10.1"
enum-iterator = "2.1.0"
actix-web = "4.11.0"
reqwest = { version = "0.12.20", features = ["json"] }

[dev-dependencies]
rand = "0.8"
ctor = "0.2.5"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }

[[bin]]
name = "menahel-client"
path = "src/bin/client.rs"
